update from DS (1146, 1147)
版本: 1147
作者: chihwen
日期: 2013年6月14日 下午 12:28:18
訊息:
將函式庫類的 js 移到 javascripts/libs/ 下，以利未來維護管理
1. 因應函式庫移動到 javascripts/libs/ 下，調整各 html 引入路徑。
2. 因應函式庫移動到 javascripts/libs/ 下，調整 swfupload.swf 路徑 (channel.js, curation.js, epcurate.js)。
issue 6337
----
已刪除 : /fakeapi/javascripts/horizontal-slider.js
已刪除 : /fakeapi/javascripts/horizontal-slider.min.js
已刪除 : /fakeapi/javascripts/jquery.autotab.js
已刪除 : /fakeapi/javascripts/jquery.autotab.min.js
已刪除 : /fakeapi/javascripts/jquery.blockUI.js
已刪除 : /fakeapi/javascripts/jquery.blockUI.min.js
已刪除 : /fakeapi/javascripts/jquery.charcounter.js
已刪除 : /fakeapi/javascripts/jquery.charcounter.min.js
已刪除 : /fakeapi/javascripts/jquery.cookie.js
已刪除 : /fakeapi/javascripts/jquery.cookie.min.js
已刪除 : /fakeapi/javascripts/jquery.countdown.js
已刪除 : /fakeapi/javascripts/jquery.countdown.min.js
已刪除 : /fakeapi/javascripts/jquery.cycle.all.js
已刪除 : /fakeapi/javascripts/jquery.cycle.all.min.js
已刪除 : /fakeapi/javascripts/jquery.datepick.js
已刪除 : /fakeapi/javascripts/jquery.datepick.min.js
已刪除 : /fakeapi/javascripts/jquery.ellipsis.js
已刪除 : /fakeapi/javascripts/jquery.ellipsis.min.js
已刪除 : /fakeapi/javascripts/jquery.mousewheel.js
已刪除 : /fakeapi/javascripts/jquery.mousewheel.min.js
已刪除 : /fakeapi/javascripts/jquery.swfobject.js
已刪除 : /fakeapi/javascripts/jquery.swfobject.min.js
已刪除 : /fakeapi/javascripts/jquery.titlecard.js
已刪除 : /fakeapi/javascripts/jquery.titlecard.min.js
已刪除 : /fakeapi/javascripts/jquery.tmpl.js
已刪除 : /fakeapi/javascripts/jquery.tmpl.min.js
已刪除 : /fakeapi/javascripts/jquery.toggleval.js
已刪除 : /fakeapi/javascripts/jquery.toggleval.min.js
已刪除 : /fakeapi/javascripts/jquery.ui.datepicker-en.js
已刪除 : /fakeapi/javascripts/jquery.ui.datepicker-zh.js
已刪除 : /fakeapi/javascripts/jquery.uniform.js
已刪除 : /fakeapi/javascripts/jquery.uniform.min.js
已刪除 : /fakeapi/javascripts/json2.js
已刪除 : /fakeapi/javascripts/json2.min.js
已刪除 : /fakeapi/javascripts/nn-sdk.js
已刪除 : /fakeapi/javascripts/perfect-scrollbar.js
已刪除 : /f

--- a/episode-list.html
+++ b/episode-list.html
@@ -10,16 +10,16 @@
 <link rel="stylesheet" href="stylesheets/episode.css?v=1135" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=1135"></script>
-<script src="javascripts/jquery.mousewheel.min.js?v=1135"></script>
-<script src="javascripts/jquery.ellipsis.min.js?v=1135"></script>
-<script src="javascripts/jquery.blockUI.min.js?v=1135"></script>
-<script src="javascripts/jquery.cycle.all.min.js?v=1135"></script>
-<script src="javascripts/jquery.tmpl.min.js?v=1135"></script>
-<script src="javascripts/jquery.cookie.min.js?v=1135"></script>
-<script src="javascripts/json2.min.js?v=1135"></script>
-<script src="javascripts/purl.min.js?v=1135"></script>
-<script src="javascripts/vertical.slider.min.js?v=1135"></script>
+<script src="javascripts/libs/nn-sdk.js?v=1135"></script>
+<script src="javascripts/libs/jquery.mousewheel.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.ellipsis.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.blockUI.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.cycle.all.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.tmpl.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.cookie.min.js?v=1135"></script>
+<script src="javascripts/libs/json2.min.js?v=1135"></script>
+<script src="javascripts/libs/purl.min.js?v=1135"></script>
+<script src="javascripts/libs/vertical.slider.min.js?v=1135"></script>
 <script src="javascripts/config.js?v=1135"></script>
 <script src="javascripts/controller.js?v=1135"></script>
 <script src="javascripts/basic.js?v=1135"></script>
