--- a/login.html
+++ b/login.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=1135"></script>
-<script src="javascripts/purl.min.js?v=1135"></script>
+<script src="javascripts/libs/nn-sdk.js?v=1135"></script>
+<script src="javascripts/libs/purl.min.js?v=1135"></script>
 <script src="javascripts/config.js?v=1135"></script>
 <title>9x9.tv - Login</title>
 </head>
