--- a/signin.html
+++ b/signin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="en">
+<html class="en" lang="en">
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="cache-control" content="no-cache" />
@@ -11,21 +11,21 @@
 <link rel="stylesheet" href="stylesheets/portal.css?v=1135" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=1135"></script>
-<script src="javascripts/jquery.mousewheel.min.js?v=1135"></script>
-<script src="javascripts/jquery.ellipsis.min.js?v=1135"></script>
-<script src="javascripts/jquery.blockUI.min.js?v=1135"></script>
-<script src="javascripts/jquery.charcounter.min.js?v=1135"></script>
-<script src="javascripts/jquery.tmpl.min.js?v=1135"></script>
-<script src="javascripts/jquery.cookie.min.js?v=1135"></script>
-<script src="javascripts/json2.min.js?v=1135"></script>
-<script src="javascripts/purl.min.js?v=1135"></script>
-<script src="javascripts/vertical.slider.min.js?v=1135"></script>
+<script src="http://9x9ui-j.s3-website-ap-northeast-1.amazonaws.com/all.js" charset="utf-8"></script>
+<script src="javascripts/libs/nn-sdk.js?v=1135"></script>
+<script src="javascripts/libs/jquery.mousewheel.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.ellipsis.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.blockUI.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.charcounter.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.tmpl.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.cookie.min.js?v=1135"></script>
+<script src="javascripts/libs/json2.min.js?v=1135"></script>
+<script src="javascripts/libs/purl.min.js?v=1135"></script>
+<script src="javascripts/libs/vertical.slider.min.js?v=1135"></script>
 <script src="javascripts/config.js?v=1135"></script>
 <script src="javascripts/controller.js?v=1135"></script>
 <script src="javascripts/basic.js?v=1135"></script>
 <script src="javascripts/signin.js?v=1135"></script>
-<script src="http://9x9ui-j.s3-website-ap-northeast-1.amazonaws.com/all.js" charset="utf-8" type="text/javascript"></script>
 <title>9x9.tv - SignIn</title>
 </head>
 <body>
