--- a/channel-poi.html
+++ b/channel-poi.html
@@ -15,20 +15,20 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 <script src="http://9x9ui.s3.amazonaws.com/poi/jquery.poi.js?v=1135"></script>
-<script src="javascripts/nn-sdk.js?v=1135"></script>
-<script src="javascripts/jquery.mousewheel.min.js?v=1135"></script>
-<script src="javascripts/jquery.ellipsis.min.js?v=1135"></script>
-<script src="javascripts/jquery.blockUI.min.js?v=1135"></script>
-<script src="javascripts/jquery.charcounter.min.js?v=1135"></script>
-<script src="javascripts/jquery.uniform.min.js?v=1135"></script>
-<script src="javascripts/jquery.swfobject.min.js?v=1135"></script>
-<script src="javascripts/jquery.tmpl.min.js?v=1135"></script>
-<script src="javascripts/jquery.cookie.min.js?v=1135"></script>
-<script src="javascripts/jquery.datepick.min.js?v=1135"></script>
-<script src="javascripts/perfect-scrollbar.min.js?v=1135"></script>
-<script src="javascripts/json2.min.js?v=1135"></script>
-<script src="javascripts/purl.min.js?v=1135"></script>
-<script src="javascripts/vertical.slider.min.js?v=1135"></script>
+<script src="javascripts/libs/nn-sdk.js?v=1135"></script>
+<script src="javascripts/libs/jquery.mousewheel.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.ellipsis.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.blockUI.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.charcounter.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.uniform.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.swfobject.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.tmpl.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.cookie.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.datepick.min.js?v=1135"></script>
+<script src="javascripts/libs/perfect-scrollbar.min.js?v=1135"></script>
+<script src="javascripts/libs/json2.min.js?v=1135"></script>
+<script src="javascripts/libs/purl.min.js?v=1135"></script>
+<script src="javascripts/libs/vertical.slider.min.js?v=1135"></script>
 <script src="javascripts/config.js?v=1135"></script>
 <script src="javascripts/controller.js?v=1135"></script>
 <script src="javascripts/basic.js?v=1135"></script>
