--- a/portal-manage.html
+++ b/portal-manage.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
-<html class="en">
+<html class="en" lang="en">
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<link rel="stylesheet" href="stylesheets/style.css?v=912" />
-<link rel="stylesheet" href="stylesheets/lightbox.css?v=912" />
-<link rel="stylesheet" href="stylesheets/uniform.css?v=912" />
-<link rel="stylesheet" href="stylesheets/episode.css?v=912" />
-<link rel="stylesheet" href="stylesheets/portal.css?v=912" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
-<script src="javascripts/nn-sdk.js?v=912"></script>
-<script src="javascripts/jquery.mousewheel.min.js?v=912"></script>
-<script src="javascripts/jquery.ellipsis.js?v=912"></script>
-<script src="javascripts/jquery.blockUI.js?v=912"></script>
-<script src="javascripts/jquery.toggleval.min.js?v=912"></script>
-<script src="javascripts/jquery.charcounter.min.js?v=912"></script>
-<script src="javascripts/jquery.tmpl.min.js?v=912"></script>
-<script src="javascripts/jquery.cookie.js?v=912"></script>
-<script src="javascripts/json2.js?v=912"></script>
-<script src="javascripts/purl.js?v=912"></script>
-<script src="javascripts/vertical.slider.js?v=912"></script>
-<script src="javascripts/config.js?v=912"></script>
-<script src="javascripts/controller.js?v=912"></script>
-<script src="javascripts/basic.js?v=912"></script>
-<script src="javascripts/portal.js?v=912"></script>
-
+<link rel="stylesheet" href="stylesheets/style.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/uniform.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/episode.css?v=1135" />
+<link rel="stylesheet" href="stylesheets/portal.css?v=1135" />
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<script src="javascripts/libs/nn-sdk.js?v=1135"></script>
+<script src="javascripts/libs/jquery.mousewheel.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.ellipsis.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.blockUI.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.charcounter.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.tmpl.min.js?v=1135"></script>
+<script src="javascripts/libs/jquery.cookie.min.js?v=1135"></script>
+<script src="javascripts/libs/json2.min.js?v=1135"></script>
+<script src="javascripts/libs/purl.min.js?v=1135"></script>
+<script src="javascripts/libs/vertical.slider.min.js?v=1135"></script>
+<script src="javascripts/config.js?v=1135"></script>
+<script src="javascripts/controller.js?v=1135"></script>
+<script src="javascripts/basic.js?v=1135"></script>
+<script src="javascripts/portal.js?v=1135"></script>
 <title>9x9.tv - My Portal</title>
 </head>
 <body>
