--- a/channel-setting.html
+++ b/channel-setting.html
@@ -51,7 +51,7 @@
 
 <div id="studio-nav">
 <div class="studio-nav-wrap">
-<h3><a href="index.html"><span class="cms-icon">CMS</span><p class="sub-title">Content Management System</p></a></h3>
+<h3><a href="index.html"><span class="cms-icon">CMS</span><span class="sub-title">Content Management System</span></a></h3>
 <ul>
 <li class="on"><span><a href="index.html">My Channels</a></span></li>
 <li id="my-portal" class="hide"><span><a href="portal-set.html">My Portal</a></span></li>
