--- a/portal-manage.html
+++ b/portal-manage.html
@@ -52,7 +52,7 @@
 <!-- Navigation Layer Begin -->
 <div id="studio-nav">
     <div class="studio-nav-wrap">
-        <h3><a href="./">CMS</a></h3>
+        <h3><a href="index.html"><span class="cms-icon">CMS</span><span class="sub-title">Content Management System</span></a></h3>
         <ul>
             <li><span><a href="index.html">My Channels</a></span></li>
             <li class="on"><span><a href="#">My Portal</a></span></li>
