版本: 4937 作者: Mars 日期: 2013/6/21 17:30 訊息: 修正 PCS portal-manage.html 預覽( 新增頻道 ) / Cunnie 修正 CSS 1. 在搜尋後，點選頻道，關掉後 channel list 會清空，但 Add 按鈕沒消失， 2. Add 按鈕翻譯
----
異動 : /portal-manage.html
異動 : /javascripts/portal.js
異動 : /lang/en.json
異動 : /lang/zh.json
異動 : /stylesheets/style.css

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4938 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/portal-manage.html
+++ b/portal-manage.html
@@ -201,7 +201,7 @@
         <div class="msg-btn-holder">
             <div id="searchAdd" class="btn-white" style="display: none">
                 <p class="left"></p>
-                <p id="portal_add_channel" class="center">Add</p>
+                <p id="portal_add_channel" class="center langkey">Add</p>
                 <p class="right"></p>
             </div> 
         </div>
