版本: 4973 作者: Mars 日期: 2013/6/26 13:39 訊息: 修改 portal-manage.html - add channel 的搜尋結果的 checkbox 大小 修改 brand-setting.html - Brand Logo css ---- 異動 : /brand-setting.html 異動 : /javascripts/stylesheets/portal.css 異動 : /images/icon_checkbox.png
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4973 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/brand-setting.html
+++ b/brand-setting.html
@@ -115,10 +115,12 @@
                             <div class="clearfix upload-img">
                                 <span class="required-field">*</span>
                                 <span class="form-title langkey" >Brand Logo:</span>
-                                <p class="img">
-                                    <img id="brand-logo" src="thumbnail/brand_default.png" alt="" width="260" height="200" class="thumbnail" />
-                                    <img src="thumbnail/brand_loading.gif" alt="" class="loading" />
-                                </p>
+                                <div class="logo">
+                                    <p class="img">
+                                        <img id="brand-logo" src="thumbnail/brand_default.png" alt="" width="260" height="200" class="thumbnail" />
+                                        <img src="thumbnail/brand_loading.gif" alt="" class="loading" />
+                                    </p>
+                                </div>
                                 <div class="upload-btn">
                                     <p id="uploadThumbnail">&nbsp;</p>
                                     <br/>
