update from DS (1246)
版本: 1246
作者: chihwen
日期: 2013年6月26日 下午 09:44:04
訊息:
1. 從 9x9 production SVN 版本 4973 轉入 fakeapi 分支。
2. index 和 episode-list 的圖片比例調整成照 9x9 所提供的樣式。
issue 5927
----
異動 : /fakeapi/epcurate-publish.html
異動 : /fakeapi/episode-list.html
異動 : /fakeapi/images/icon_checkbox.png
異動 : /fakeapi/index.html
異動 : /fakeapi/javascripts/index.js
異動 : /fakeapi/stylesheets/channel.css
異動 : /fakeapi/stylesheets/epcurate.css
異動 : /fakeapi/stylesheets/episode.css
異動 : /fakeapi/stylesheets/portal.css

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4977 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/epcurate-publish.html
+++ b/epcurate-publish.html
@@ -194,7 +194,7 @@
 </script>
 
 <script id="img-list-tmpl-item" type="text/x-jquery-tmpl">
-<li><div class="img"><img src="${imageUrl}" alt="${name}" /></div></li>
+<li><div class="img"><div class="img-wrap"><img src="${imageUrl}" alt="${name}" /></div></div></li>
 </script>
 
 <!--============================== footer start ==============================-->
