--- a/index.html
+++ b/index.html
@@ -147,11 +147,15 @@
 <div class="container-left">
 <div class="wrap">
 <div class="photo-list">
-<a href="/view?ch=${id}" target="_blank">
-<img src="images/icon_playlist.png" alt="" class="watermark" />
-<img src="${moreImageUrl_1}" alt="" width="32" height="32" class="ch" />
-<img src="${moreImageUrl_2}" alt="" width="192" height="108" class="ep" />
-</a>
+<div class="ep">
+<a href="/view?ch=${id}" target="_blank"><img src="${moreImageUrl_2}" alt="" /></a>
+</div>
+<div class="ch">
+<div class="img">
+<a href="/view?ch=${id}" target="_blank"><img src="${moreImageUrl_1}" alt="" /></a>
+</div>
+</div>
+<a href="/view?ch=${id}" target="_blank"><img src="images/icon_playlist.png" alt="" class="watermark" /></a>
 </div>
 
 <div class="info">
