版本: 5010 作者: Mars 日期: 2013/7/2 17:15 訊息: 修改 store-manage.html 不使用即時儲存，改用儲存鈕一次儲存所有資訊 ---- 異動 : /store-manage.html 異動 : /javascripts/v2/func.portal.store.js 異動 : /javascripts/v2/domready.portal.store.js
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5010 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/store-manage.html
+++ b/store-manage.html
@@ -167,7 +167,7 @@
 <!-- Unsave Prompt Layer End -->
 
 <script id="store-category-li-tmpl" type="text/x-jquery-tmpl">
-<li data-meta="${id}" class="catLi {{if $item.actCat == id }}on{{/if}}">${name}</li>
+<li id="catLi_${id}" data-meta="${id}" class="catLi {{if $item.actCat == id }}on{{/if}}">${name}</li>
 </script>
 
 <!-- store-chanels-li-tmpl Begin -->
