版本: 5027 作者: Mars 日期: 2013/7/8 14:38 訊息: 修改 portal-manage.html 不使用即時儲存，改用儲存鈕一次儲存所有資訊。 修改 ivan 決定先將 preview button 拿掉 ---- 異動 : /portal-manage.html 異動 : /javascripts/v2/func.portal.manage.js 異動 : /javascripts/v2/domready.portal.manage.js
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5027 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/portal-manage.html
+++ b/portal-manage.html
@@ -73,7 +73,7 @@
         <div id="title-func" class="clearfix">
             <h2><span class="langkey">My Portal</span> &gt; <span class="set_name"></span></h2>
             <ul>
-                <li><p class="btns"><span><a href="javascript:void(0)" id="set-preview" target="_blank" class="langkey">Preview</a></span></p></li>
+                <li class="hide"><p class="btns"><span><a href="javascript:void(0)" id="set-preview" target="_blank" class="langkey">Preview</a></span></p></li>
                 <li id="set-save" class="last"><p class="btns"><span><a href="javascript:void(0)" class="langkey">Save</a></span></p></li>
             </ul>
         </div>
