Added perfect scrollbar. Fixed footer-control css class bug. Revised content-main-wrap layout according to footer display.
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5037 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/channel-add.html
+++ b/channel-add.html
@@ -5,6 +5,7 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
+<link rel="stylesheet" href="stylesheets/perfect-scrollbar.css" />
 <link rel="stylesheet" href="stylesheets/style.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
@@ -61,7 +62,7 @@
 <!-- Content Layer End -->
 
 <!-- Footer Layer Begin -->
-<p id="footer-control"></p>
+<p id="footer-control" class="on"></p>
 <div id="footer">
     <span>© 2013 9x9.tv. All rights reserved.</span>
     <ul id="footer-list">
@@ -319,6 +320,7 @@
 <script src="javascripts/libs/json2.min.js?v=1278"></script>
 <script src="javascripts/libs/purl.min.js?v=1278"></script>
 <script src="javascripts/libs/swfupload/swfupload.js?v=1278"></script>
+<script src="javascripts/libs/perfect-scrollbar.js"></script>
 <script src="javascripts/v2/config.js?v=1278"></script>
 <script src="javascripts/v2/func.common.js?v=1278"></script>
 <script src="javascripts/v2/func.channel.js?v=1278"></script>
