--- a/store-manage.html
+++ b/store-manage.html
@@ -5,6 +5,7 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
+<link rel="stylesheet" href="stylesheets/perfect-scrollbar.css" />
 <link rel="stylesheet" href="stylesheets/style.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
@@ -233,6 +234,7 @@
 <script src="javascripts/libs/jquery.cookie.min.js?v=1278"></script>
 <script src="javascripts/libs/json2.min.js?v=1278"></script>
 <script src="javascripts/libs/purl.min.js?v=1278"></script>
+<script src="javascripts/libs/perfect-scrollbar.js"></script>
 <script src="javascripts/v2/config.js?v=1278"></script>
 <script src="javascripts/v2/func.common.js?v=1278"></script>
 <script src="javascripts/v2/func.portal.store.js?v=1278"></script>
