Implemented loading more channels when user scrolls to the bottom.
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5050 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/store-manage.html
+++ b/store-manage.html
@@ -100,7 +100,7 @@
                     </ul>
                     <div class="load">
                         <p class="left"></p>
-                        <p class="center"><span><img class="hide" src="images/icon_load.gif" alt="" /><span class="langkey">Load More</span></span></p>
+                        <p class="center"><span><img src="images/icon_load.gif" alt="" /><span class="langkey">Load More</span></span></p>
                         <p class="right"></p>
                     </div>
                 </div>
