Added channel loading when collapse pressed in store-manage.html.
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5054 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/store-manage.html
+++ b/store-manage.html
@@ -98,7 +98,7 @@
                 <div id="store-list">
                     <ul class="channel-list">
                     </ul>
-                    <div class="load">
+                    <div class="load" style="display: none;">
                         <p class="left"></p>
                         <p class="center"><span><img src="images/icon_load.gif" alt="" /><span class="langkey">Load More</span></span></p>
                         <p class="right"></p>
