Modified links for updated stylesheet and javascript for portal-manage.html.
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5068 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/portal-manage.html
+++ b/portal-manage.html
@@ -5,8 +5,9 @@
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
+<link rel="stylesheet" href="stylesheetsv3/perfect-scrollbar.css" />
 <link rel="stylesheet" href="stylesheetsv3/style.css?v=1278" />
-<link rel="stylesheet" href="stylesheetsv3/lightbox.css?v=1278" />
+<link rel="stylesheet" href="stylesheets/lightbox.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/uniform.css?v=1278" />
 <link rel="stylesheet" href="stylesheets/episode.css?v=1278" />
 <link rel="stylesheet" href="stylesheetsv3/portal.css?v=1278" />
@@ -384,6 +385,7 @@
 <script src="javascripts/libs/jquery.cookie.min.js?v=1278"></script>
 <script src="javascripts/libs/json2.min.js?v=1278"></script>
 <script src="javascripts/libs/purl.min.js?v=1278"></script>
+<script src="javascripts/libs/perfect-scrollbar.js"></script>
 <script src="javascripts/v2/config.js?v=1278"></script>
 <script src="javascripts/v3/func.common.js?v=1278"></script>
 <script src="javascripts/v3/func.portal.manage.js?v=1278"></script>
