版本: 5092 作者: Mars 日期: 2013/7/10 14:30 訊息: 修改 iven change requirement 1. PCS landing page change portal-set.html to portal-mange.html 2. PCS only has one SET can be set , and channels in SET is unlimited ---- 異動 : /javascripts/v2/func.portal.set.js 異動 : /javascripts/v2/func.portal.manage.js 異動 : /javascripts/v3/func.portal.manage.js 異動 : /javascripts/v3/domready.portal.manage.js 異動 : /brand-setting.html 異動 : /channel-add.html 異動 : /channel-poi.html 異動 : /channel-setting.html 異動 : /cms-settings.html 異動 : /episode-list.html 異動 : /index.html 異動 : /portal-manage.html 異動 : /portal-set.html 異動 : /store-manage.html
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5092 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/channel-add.html
+++ b/channel-add.html
@@ -38,7 +38,7 @@
         <h3><a href="index.html"><span class="cms-icon">CMS</span><span class="sub-title">Content Management System</span></a></h3>
         <ul>
             <li class="on"><span><a href="index.html">My Channels</a></span></li>
-            <li id="my-portal" class="hide"><span><a href="portal-set.html">My Portal</a></span></li>
+            <li id="my-portal" class="hide"><span><a href="portal-manage.html">My Portal</a></span></li>
         </ul>
         <div class="studio-setup">
             <p class="btn-left"><span class="btn-right"><span class="btn-middle"><a href="cms-settings.html"><img src="images/icon_studio_setup.png" alt="" />CMS Settings</a></span></span></p>
