--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h3><a href="index.html"><span class="cms-icon">CMS</span><span class="sub-title">Content Management System</span></a></h3>
         <ul>
             <li class="on"><span><a href="index.html">My Channels</a></span></li>
-            <li id="my-portal" class="hide"><span><a href="portal-set.html">My Portal</a></span></li>
+            <li id="my-portal" class="hide"><span><a href="portal-manage.html">My Portal</a></span></li>
         </ul>
         <div class="studio-setup">
             <p class="btn-left"><span class="btn-right"><span class="btn-middle"><a href="cms-settings.html"><img src="images/icon_studio_setup.png" alt="" />CMS Settings</a></span></span></p>
