--- a/portal-manage.html
+++ b/portal-manage.html
@@ -40,7 +40,7 @@
         <h3><a href="index.html"><span class="cms-icon">CMS</span><span class="sub-title">Content Management System</span></a></h3>
         <ul>
             <li><span><a href="index.html">My Channels</a></span></li>
-            <li class="on"><span><a href="portal-set.html">My Portal</a></span></li>
+            <li class="on"><span><a href="portal-manage.html">My Portal</a></span></li>
         </ul>
         <div class="studio-setup">
             <p class="btn-left"><span class="btn-right"><span class="btn-middle"><a href="cms-settings.html"><img src="images/icon_studio_setup.png" alt="" />CMS Settings</a></span></span></p>
@@ -60,7 +60,7 @@
         <div id="func-nav">
             <ul>
                 <li>
-                    <a href="portal-set.html" class="portal langkey">My Portal</a>
+                    <a href="portal-manage.html" class="portal langkey">My Portal</a>
                     <ul class="sub-nav">
                     </ul>
                 </li>
@@ -228,7 +228,7 @@
 <script id="portal-search-item-tmpl" type="text/x-jquery-tmpl">
 <li id="sch_${id}">
     <div class="thumb">
-        <div id="schk_${id}" class="checkbox"></div>
+        <div id="schk_${id}" class="checkbox{{if alreadyAdd === true}} hide{{/if}}"></div>
         <a href="/view?ch=${id}" target="_blank">
             <img src="images/icon_playlist.png" alt="" class="watermark" />
         </a>
@@ -263,7 +263,7 @@
     <span id="msg-portal" class="msg-error"></span>
 </div>
 <div class="clearfix sort">
-    <span class="form-title">${nn._([cms.global.PAGE_ID, 'channel-list', 'Channel List'])}: </span> <p class="number">(<span id="channelCnt">${channelCnt}</span> / 27 ${nn._([cms.global.PAGE_ID, 'channel-list', 'Channels'])})</p>
+    <span class="form-title">${nn._([cms.global.PAGE_ID, 'channel-list', 'Channel List'])}: </span> <p class="number"><span id="channelCnt">${channelCnt}</span> ${nn._([cms.global.PAGE_ID, 'channel-list', 'Channels'])}</p>
     <ul class="sort-list">
         <li class="head">${nn._([cms.global.PAGE_ID, 'channel-list', 'Sorted by'])}: </li>
         <li tvalue="2" class="sType {{if sortingType == 2}}on{{/if}}">${nn._([cms.global.PAGE_ID, 'channel-list', 'Updated time'])}</li>
