--- a/store-manage.html
+++ b/store-manage.html
@@ -39,7 +39,7 @@
         <h3><a href="index.html"><span class="cms-icon">CMS</span><span class="sub-title">Content Management System</span></a></h3>
         <ul>
             <li><span><a href="index.html">My Channels</a></span></li>
-            <li class="on"><span><a href="portal-set.html">My Portal</a></span></li>
+            <li class="on"><span><a href="portal-manage.html">My Portal</a></span></li>
         </ul>
         <div class="studio-setup">
             <p class="btn-left"><span class="btn-right"><span class="btn-middle"><a href="cms-settings.html"><img src="images/icon_studio_setup.png" alt="" />CMS Settings</a></span></span></p>
@@ -58,7 +58,7 @@
     <div id="content-nav">
         <div id="func-nav">
             <ul>
-                <li><a href="portal-set.html" class="portal langkey">My Portal</a></li>
+                <li><a href="portal-manage.html" class="portal langkey">My Portal</a></li>
                 <li class="active"><a href="store-manage.html" class="store langkey">Channel Store</a></li>
                 <li><a href="brand-setting.html" class="brand langkey">Brand Settings</a></li>
             </ul>
