--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <!-- Header Layer Begin -->
 <div id="header">
+    測試測試測試
     <a href="../" target="_blank" id="logo"></a>
     <ul id="nav">
         <li id="home"><span><a href="../" target="_blank">9x9.tv Official Web</a></span></li>
