版本: 5108 作者: Mars 日期: 2013/7/17 17:12 訊息: 修改 for 7/20 4.0 release , play only support Hyper Channel POI , disable other POI edit in CCS. 1. add a var cms.global.IS_REMARK to switch something or function enable/disable. ---- 異動 : /channel-setting.html 異動 : /epcurate-curation.html 異動 : /episode-list.html 異動 : /index.html 異動 : /javascripts/v2/config.js
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5108 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/episode-list.html
+++ b/episode-list.html
@@ -152,7 +152,9 @@
     <li>&nbsp;</li>
 {{else}}
     <li class="active"><a href="episode-list.html?id=${id}" class="episode">${nn._([cms.global.PAGE_ID, 'func-nav', 'Episode list'])}</a></li>
+    {{if !cms.global.IS_REMARK}}
     <li><a href="channel-poi.html?id=${id}" class="poi">${nn._([cms.global.PAGE_ID, 'func-nav', 'Channel POI'])}</a></li>
+    {{/if}}
     <li><a href="channel-setting.html?id=${id}" class="setting">${nn._([cms.global.PAGE_ID, 'func-nav', 'Settings'])}</a></li>
 {{/if}}
 </script>
