--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -559,6 +559,7 @@
                     <p>${nn._([cms.global.PAGE_ID, 'poi-event', 'User can go to watch another 9x9.tv channel or episode.'])}</p>
                 </div>
             </li>
+            {{if !cms.global.IS_REMARK}}
             <li class="event-scheduled">
                 <div class="block">
                     <div class="img schedule">
@@ -575,6 +576,16 @@
                     <p>${nn._([cms.global.PAGE_ID, 'poi-event', 'Send an instant notification to user to get more information.'])}</p>
                 </div>
             </li>
+            {{else}}
+            <li class="event-coming-soon">
+                <div class="block">
+                    <div class="img coming-soon">
+                        <h4>${nn._([cms.global.PAGE_ID, 'poi-event', 'Coming Soon'])}</h4>
+                    </div>
+                    <p>&nbsp;</p>
+                </div>
+            </li>
+            {{/if}}
         </ul>
         <div class="func">
             <ul>
