版本: 5117 作者: Mars 日期: 2013/7/19 14:12 訊息: 修改 cms 4.0 優化列表 row 25 / 26 / 27 1. Channel "Thumbnail"文字改為"Channel logo" 2. Channel title 文字欄下方提示文："Best within 10 characters"    文字欄右邊會有計算的數字提示，預設0，會隨著文字輸入數由小到大，例如1, 2, 3, 4, 5 ....... 3. Channel description 文字欄下方提示文："Best within 52 characters"    文字欄右邊會有計算的數字提示，預設0，會隨著文字輸入數由小到大，例如1, 2, 3, 4, 5 ....... ---- 異動 : /channel-setting.html 異動 : /channel-add.html 異動 : /javascripts/v2/func.channel.js 異動 : /javascripts/v3/func.channel.js 異動 : /lang/en.json 異動 : /lang/zh.json
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@5117 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -158,11 +158,11 @@
         <label for="name"><acronym title="Required field" class="mark-required">*</acronym>${nn._([cms.global.PAGE_ID, 'setting-form', 'Title'])}</label>
         <div class="fmfield">
             <p class="text"><span><input type="text" name="name" id="name" maxlength="100" value="${name}" class="text" /></span></p>
-            <span class="notice"><span id="name-charcounter">20</span>　${nn._([cms.global.PAGE_ID, 'setting-form', 'Best within 20 characters'])}</span>
+            <span class="notice"><span id="name-charcounter">20</span>　${nn._([cms.global.PAGE_ID, 'setting-form', 'Best within 10 characters'])}</span>
         </div>
     </div>
     <div class="fminput clearfix">
-        <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Thumbnail'])}</label>
+        <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Channel logo'])}</label>
         <div class="fmfield upload-img">
             <div class="thumbnail">
                 <div class="img-wrap">
@@ -183,7 +183,7 @@
         <label>${nn._([cms.global.PAGE_ID, 'setting-form', 'Description'])}</label>
         <div class="fmfield">
             <p class="textarea"><span><span><textarea name="intro" id="intro" cols="80" class="textarea">${intro}</textarea></span></span></p>
-            <span class="notice"><span id="intro-charcounter">70</span>　${nn._([cms.global.PAGE_ID, 'setting-form', 'Best within 70 characters'])}</span>
+            <span class="notice"><span id="intro-charcounter">70</span>　${nn._([cms.global.PAGE_ID, 'setting-form', 'Best within 52 characters'])}</span>
         </div>
     </div>
     <div class="fminput clearfix">
